sidebarbook club component

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -276,49 +276,6 @@
   flex-direction: column;
 }
 
-.clubrow {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  color: rgb(216, 216, 216);
-  font-size: 18px;
-}
-.clubrow div {
-  margin-right: 1.5%;
-}
-.clubrow .clubname:hover {
-  color: white;
-  cursor: pointer;
-}
-.clubrow .dropdown {
-  font-size: 23.5px;
-}
-.clubrow .dropdown:hover {
-  color: white;
-  cursor: pointer;
-}
-
-.clubOption {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  color: rgb(216, 216, 216);
-  font-size: 15px;
-  margin-left: 10%;
-  margin-top: 1%;
-  cursor: pointer;
-}
-.clubOption div {
-  margin-right: 1.5%;
-}
-.clubOption div:hover {
-  color: white;
-  cursor: pointer;
-}
-.clubOption button {
-  border: none;
-}
-
 .featuredCard {
   transform: scale(1.15);
   display: flex;
@@ -605,6 +562,49 @@
   position: absolute;
 }
 
+.clubrow {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  color: rgb(216, 216, 216);
+  font-size: 18px;
+}
+.clubrow div {
+  margin-right: 1.5%;
+}
+.clubrow .clubname:hover {
+  color: white;
+  cursor: pointer;
+}
+.clubrow .dropdown {
+  font-size: 23.5px;
+}
+.clubrow .dropdown:hover {
+  color: white;
+  cursor: pointer;
+}
+
+.clubOption {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  color: rgb(216, 216, 216);
+  font-size: 15px;
+  margin-left: 10%;
+  margin-top: 1%;
+  cursor: pointer;
+}
+.clubOption div {
+  margin-right: 1.5%;
+}
+.clubOption div:hover {
+  color: white;
+  cursor: pointer;
+}
+.clubOption button {
+  border: none;
+}
+
 body {
   background-color: rgb(23, 23, 23);
   font-family: "Hind", sans-serif;
@@ -645,7 +645,6 @@ body {
   flex-direction: row;
   justify-content: center;
   align-content: center;
-  align-items: center;
   height: 745px;
 }
 
@@ -653,7 +652,8 @@ body {
   display: flex;
   flex-direction: column;
   background-color: rgb(67, 174, 219);
-  height: 100%;
+  background-color: rgba(128, 128, 128, 0.467);
+  height: auto;
   width: 20%;
   align-items: center;
 }
