--- a/client/src/components/BookContainer/_BookContainer.scss
+++ b/client/src/components/BookContainer/_BookContainer.scss
@@ -7,5 +7,5 @@
     flex-wrap: wrap;
     margin-left: 5%;
     margin-right: 5%;
-    background-color: rgb(15, 15, 15);
+    background-color: black;
 }
