--- a/client/src/components/BookReview/_BookReview.scss
+++ b/client/src/components/BookReview/_BookReview.scss
@@ -44,6 +44,35 @@
         margin-bottom: 2px;
         margin-right: 1%;
     }
+    span:nth-of-type(1){
+        font-size: 13px !important;
+        // align-self: center !important;
+        margin-top: -5% !important; 
+    }
+
+    div:nth-child(2){
+        span:nth-of-type(1){
+            visibility: hidden;
+            position: relative;
+        }
+        span:nth-of-type(1):after{
+            color:s.$dark-alt;
+            font-size: 20px;
+            position: absolute;
+            top: -30%;
+            left: 0%;
+            visibility: visible;
+            content: "+" !important;
+        }
+    }
+
+    &.madebyuser{
+        cursor: default !important;
+        div:nth-child(2){
+            cursor: default !important;
+            opacity: 0 !important;
+        }
+    }
 }
 
 .emojiSelector{
