--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -58,7 +58,7 @@ body {
   flex-direction: column;
   background-color: rgb(67, 174, 219);
   background-color: s.$primary;
-  height: auto;
+  height: 100vh;
   width: 20%;
   align-items: center;
 
