--- a/client/src/components/BookReview/_BookReview.scss
+++ b/client/src/components/BookReview/_BookReview.scss
@@ -1,81 +1,113 @@
-@use '../../styles' as s;
-
+@use "../../styles" as s;
 
 .userReviewCard {
-    background-color: s.$dark-alt;
-    // background-color: salmon;
-    padding: 10px;
-    width: 97.5%;
-    margin-bottom: .5%;
+  background-color: s.$dark-alt;
+  // background-color: salmon;
+  padding: 10px;
+  width: 97.5%;
+  margin-bottom: 0.5%;
+  border-radius: s.$radius;
 }
 
-
 .userReviewId {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .userReviewTitle {
-    span {
-        color: white;
-    }
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  width: 50%;
+
+  div,
+  span,
+  img,
+  label {
+    margin-right: 10px;
+  }
+
+  
+  button,img{
+    margin-right: 5px;
+  }
+  span {
+    color: white;
+  }
+
+  div {
+    margin-left: -4px;
+  }
 }
 
 .userReviewDate {
-    font-size: 15px;
+  font-size: 15px;
 }
 
 .userReviewText {
-    display: flex;
-    flex-direction: row;
-    word-wrap: break-word;
-    margin-top: .5%;
-
+  display: flex;
+  flex-direction: row;
+  word-wrap: break-word;
+  margin-top: 0.5%;
 }
 
 .reactionCounter {
-    display: flex;
-    flex-direction: row;
-    margin-top: .5%;
+  display: flex;
+  flex-direction: row;
+  margin-top: 0.5%;
 
-    h5 {
-        margin-top: 5px;
-        margin-bottom: 2px;
-        margin-right: 1%;
-    }
-    span:nth-of-type(1){
-        font-size: 13px !important;
-        // align-self: center !important;
-        margin-top: -5% !important; 
-    }
+  h5 {
+    margin-top: 5px;
+    margin-bottom: 2px;
+    margin-right: 1%;
+  }
+  span:nth-of-type(1) {
+    font-size: 13px !important;
+    // align-self: center !important;
+    margin-top: -5% !important;
+  }
 
-    div:nth-child(2){
-        span:nth-of-type(1){
-            visibility: hidden;
-            position: relative;
-        }
-        span:nth-of-type(1):after{
-            color:s.$dark-alt;
-            font-size: 20px;
-            position: absolute;
-            top: -30%;
-            left: 0%;
-            visibility: visible;
-            content: "+" !important;
-        }
+  div:nth-child(2) {
+    span:nth-of-type(1) {
+      visibility: hidden;
+      position: relative;
     }
+    span:nth-of-type(1):after {
+      color: s.$dark-alt;
+      font-size: 20px;
+      position: absolute;
+      top: -30%;
+      left: 0%;
+      visibility: visible;
+      content: " + " !important;
+      // padding-left: 5px;
+      // padding-right: 5px;
+    }
+  }
 
-    &.madebyuser{
-        cursor: default !important;
-        div:nth-child(2){
-            cursor: default !important;
-            opacity: 0 !important;
-        }
+  &.madebyuser {
+    cursor: default !important;
+    div:nth-child(3) {
+      display: none !important;
+      cursor: default !important;
+      opacity: 0 !important;
     }
+  }
 }
 
-.emojiSelector{
-    opacity: 92.5%;
-    position: absolute;
+.emojiSelector {
+  opacity: 92.5%;
+  position: absolute;
+}
+
+.reviewprofilepic {
+  height: 25px;
+  // margin-bottom: -4%;
+  border-radius: calc(s.$radius * 1.5);
+  filter: invert(0.75);
+}
+
+.reviewbuttonlabel {
+  margin-right: 1%;
 }
