--- a/client/src/index.css
+++ b/client/src/index.css
@@ -562,6 +562,7 @@
   padding: 10px;
   width: 97.5%;
   margin-bottom: 0.5%;
+  border-radius: 5px;
 }
 
 .userReviewId {
@@ -570,8 +571,26 @@
   align-items: center;
 }
 
+.userReviewTitle {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  width: 50%;
+}
+.userReviewTitle div,
+.userReviewTitle span,
+.userReviewTitle img,
+.userReviewTitle label {
+  margin-right: 10px;
+}
+.userReviewTitle button, .userReviewTitle img {
+  margin-right: 5px;
+}
 .userReviewTitle span {
   color: white;
+}
+.userReviewTitle div {
+  margin-left: -4px;
 }
 
 .userReviewDate {
@@ -610,12 +629,13 @@
   top: -30%;
   left: 0%;
   visibility: visible;
-  content: "+" !important;
+  content: " + " !important;
 }
 .reactionCounter.madebyuser {
   cursor: default !important;
 }
-.reactionCounter.madebyuser div:nth-child(2) {
+.reactionCounter.madebyuser div:nth-child(3) {
+  display: none !important;
   cursor: default !important;
   opacity: 0 !important;
 }
@@ -623,6 +643,16 @@
 .emojiSelector {
   opacity: 92.5%;
   position: absolute;
+}
+
+.reviewprofilepic {
+  height: 25px;
+  border-radius: 7.5px;
+  filter: invert(0.75);
+}
+
+.reviewbuttonlabel {
+  margin-right: 1%;
 }
 
 .clubrow {
