adjust styling of homepage

--- a/client/src/components/Home/_Home.scss
+++ b/client/src/components/Home/_Home.scss
@@ -8,9 +8,15 @@
 }
 
 .homeshelfrow {
+  display: flex;
+  justify-content: flex-start;
   transform: scale(0.9);
   h1 {
     transform: scale(1);
+  }
+
+  .bookContainer{
+    justify-content: flex-start;
   }
 }
 
@@ -19,5 +25,7 @@
     border-radius: s.$radius;
     h1 {
         background-color: s.$bg;
+        margin-bottom: -1%;
+
     }
 }
