--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -8,6 +8,7 @@
 @use "./components/SearchPage/SearchPage";
 @use "./components/BookReview/BookReview";
 @use "./components/SideBarBookClub/SideBarBookClub";
+@use "./components/HomeShelfContainer/HomeShelfContainer";
 
 @use "./styles" as s;
 
