--- a/client/src/index.css
+++ b/client/src/index.css
@@ -201,7 +201,7 @@
   position: absolute;
   text-align: right;
   top: 8.5%;
-  left: 89%;
+  left: 85%;
   background-color: rgba(65, 65, 65, 0.95);
   z-index: 1;
   -webkit-animation: dropDown 0.45s ease-in-out forwards;
@@ -711,6 +711,305 @@
 }
 .homeshelfcontainer h1 span {
   font-size: 20px;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+.signin-modal {
+  position: absolute;
+  transition: all 0.15s;
+  top: 25%;
+  left: 25%;
+  -webkit-animation: 0.3s fadeInAnimation ease-in-out;
+          animation: 0.3s fadeInAnimation ease-in-out;
+  -webkit-animation-iteration-count: 1;
+          animation-iteration-count: 1;
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
+  z-index: 1000;
+}
+
+.modal-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.modal-title {
+  margin: 0;
+  font-size: 250%;
+}
+
+.modal-welcome {
+  margin: 0;
+  font-size: 250%;
+  color: rgb(216, 216, 216);
+}
+
+.modal-create {
+  margin: 0;
+  margin-bottom: 3%;
+  color: rgb(65, 65, 65);
+  font-size: 230%;
+}
+
+.modal-signin-title {
+  margin: 0;
+  margin-bottom: 3%;
+  color: rgb(65, 65, 65);
+  font-size: 300%;
+}
+
+.modal-subtitle {
+  font-size: 14px;
+  font-weight: 100;
+  line-height: 20px;
+  letter-spacing: 0.5px;
+  margin: 20px 0 30px;
+}
+
+.or-message {
+  font-size: 12px;
+}
+
+.modal-a {
+  color: rgb(65, 65, 65);
+  font-size: 14px;
+  text-decoration: none;
+  margin: 15px 0;
+}
+
+.modal-button {
+  border-radius: 20px;
+  border: 1px solid transparent;
+  background-color: rgb(65, 65, 65);
+  color: #ffffff;
+  font-size: 12px;
+  font-weight: bold;
+  padding: 12px 45px;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  transition: transform 80ms ease-in;
+  cursor: pointer;
+  transition: 1s;
+}
+.modal-button:hover {
+  border: 1px solid transparent;
+  background-color: rgb(45, 45, 45);
+}
+.modal-button:active {
+  transform: scale(0.95);
+}
+.modal-button:focus {
+  outline: none;
+}
+
+.ghost {
+  background-color: transparent;
+  border-color: #ffffff;
+  transition: 0.5s;
+}
+.ghost:hover {
+  background-color: rgb(65, 65, 65);
+  border-color: transparent;
+}
+
+.modal-form {
+  background-color: #ffffff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  padding: 0 50px;
+  height: 100%;
+  text-align: center;
+}
+
+.modal-input {
+  background-color: #eee;
+  border: none;
+  padding: 12px 15px;
+  margin: 8px 0;
+  width: 100%;
+}
+
+.modal-input-end {
+  background-color: #eee;
+  border: none;
+  padding: 12px 15px;
+  margin: 8px 0;
+  width: 100%;
+  margin-bottom: 5%;
+}
+
+.modal-input-fullname {
+  flex-direction: row;
+  justify-content: center;
+}
+
+.modal-input-name {
+  background-color: #eee;
+  border: none;
+  padding: 12px 15px;
+  margin: 8px 4px;
+  width: 47%;
+}
+
+.container {
+  background-color: rgb(27, 27, 27);
+  border-radius: 10px;
+  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+  position: relative;
+  overflow: hidden;
+  width: 768px;
+  max-width: 100%;
+  min-height: 480px;
+}
+
+.form-container {
+  position: absolute;
+  top: 0;
+  height: 100%;
+  transition: all 0.6s ease-in-out;
+}
+
+.sign-in-container {
+  left: 0;
+  width: 50%;
+  z-index: 2;
+}
+
+.container.right-panel-active .sign-in-container {
+  transform: translateX(100%);
+}
+
+.sign-up-container {
+  left: 0;
+  width: 50%;
+  opacity: 0;
+  z-index: 1;
+}
+
+.container.right-panel-active .sign-up-container {
+  transform: translateX(100%);
+  opacity: 1;
+  z-index: 5;
+  -webkit-animation: show 0.6s;
+          animation: show 0.6s;
+}
+
+@-webkit-keyframes show {
+  0%, 49.99% {
+    opacity: 0;
+    z-index: 1;
+  }
+  50%, 100% {
+    opacity: 1;
+    z-index: 5;
+  }
+}
+
+@keyframes show {
+  0%, 49.99% {
+    opacity: 0;
+    z-index: 1;
+  }
+  50%, 100% {
+    opacity: 1;
+    z-index: 5;
+  }
+}
+.overlay-container {
+  position: absolute;
+  top: 0;
+  left: 50%;
+  width: 50%;
+  height: 100%;
+  overflow: hidden;
+  transition: transform 0.6s ease-in-out;
+  z-index: 100;
+}
+
+.container.right-panel-active .overlay-container {
+  transform: translateX(-100%);
+}
+
+.overlay {
+  background-color: rgb(45, 45, 45);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: 0 0;
+  color: #ffffff;
+  position: relative;
+  left: -100%;
+  height: 100%;
+  width: 200%;
+  transform: translateX(0);
+  transition: transform 0.6s ease-in-out;
+}
+
+.container.right-panel-active .overlay {
+  transform: translateX(50%);
+}
+
+.overlay-panel {
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  padding: 0 40px;
+  text-align: center;
+  top: 0;
+  height: 100%;
+  width: 50%;
+  transform: translateX(0);
+  transition: transform 0.6s ease-in-out;
+}
+
+.overlay-left {
+  transform: translateX(-20%);
+}
+
+.container.right-panel-active .overlay-left {
+  transform: translateX(0);
+}
+
+.overlay-right {
+  right: 0;
+  transform: translateX(0);
+}
+
+.container.right-panel-active .overlay-right {
+  transform: translateX(20%);
+}
+
+@-webkit-keyframes fadeInAnimation {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes fadeInAnimation {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+.demo {
+  background-color: grey;
+  margin-top: 5%;
+}
+.demo:hover {
+  background-color: rgb(27, 27, 27);
 }
 
 body {
