--- a/client/src/index.css
+++ b/client/src/index.css
@@ -717,11 +717,17 @@
   box-sizing: border-box;
 }
 
+.authContainer {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
 .signin-modal {
+  margin-top: 45%;
   position: absolute;
   transition: all 0.15s;
-  top: 25%;
-  left: 25%;
   -webkit-animation: 0.3s fadeInAnimation ease-in-out;
           animation: 0.3s fadeInAnimation ease-in-out;
   -webkit-animation-iteration-count: 1;
