--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -10,6 +10,7 @@
 @use "./components/SideBarBookClub/SideBarBookClub";
 @use "./components/HomeShelfContainer/HomeShelfContainer";
 @use "./components/Auth/Auth";
+@use "./components/Profile/Profile";
 
 @use "./styles" as s;
 
