--- a/client/src/components/BookReview/_BookReview.scss
+++ b/client/src/components/BookReview/_BookReview.scss
@@ -40,9 +40,20 @@
     margin-left: -4px;
   }
 }
+.reviewuser{
+  cursor: pointer;
+  &:hover{
+    color: s.$text;
+  }
+}
 
 .userReviewDate {
   font-size: 15px;
+  cursor: pointer;
+
+  &:hover{
+    color: white;
+  }
 }
 
 .userReviewText {
