adjust size of mini bookcard on profile page

--- a/client/src/components/Profile/_Profile.scss
+++ b/client/src/components/Profile/_Profile.scss
@@ -76,6 +76,12 @@
     .bookCover {
       height: 100px;
     }
+
+    .bookTitle{
+        font-size: smaller;
+    }
+
+    .bookAuthor{}
   }
 }
 
