add border to shelves on profile page

--- a/client/src/components/Profile/_Profile.scss
+++ b/client/src/components/Profile/_Profile.scss
@@ -44,6 +44,10 @@
   padding-right: 5%;
   padding-top: 0.5%;
   padding-bottom: 1%;
+
+  h3{
+    border-bottom: 2px solid grey;
+  }
 }
 
 .profileDisplayAllShelves {
