minor styling touchups

--- a/client/src/components/BookReview/_BookReview.scss
+++ b/client/src/components/BookReview/_BookReview.scss
@@ -47,13 +47,17 @@
   }
 }
 
-.userReviewDate {
+.userReviewBookID {
   font-size: 15px;
   cursor: pointer;
 
   &:hover{
     color: white;
   }
+}
+
+.userReviewDate {
+  font-size: 15px;
 }
 
 .userReviewText {
