minor styling touchups

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1041,7 +1041,7 @@
   margin-left: 20%;
   margin-right: 20%;
   background-color: rgb(40, 40, 40);
-  height: 85vh;
+  height: 850px;
   padding: 50px;
   border-radius: 5px;
 }
