--- a/client/src/components/Profile/_Profile.scss
+++ b/client/src/components/Profile/_Profile.scss
@@ -8,7 +8,7 @@
   margin-left: 20%;
   margin-right: 20%;
   background-color: rgb(40, 40, 40);
-  height: 85vh;
+  height: 850px;
   padding: 50px;
   border-radius: s.$radius;
 }
