--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1049,13 +1049,13 @@
 .profileCardTop {
   background-color: rgba(128, 128, 128, 0.467);
   border-radius: 5px;
-  height: 60%;
+  height: 63.5%;
 }
 
 .profileCardBottom {
   background-color: rgba(128, 128, 128, 0.467);
   border-radius: 5px;
-  height: 40%;
+  height: 36.5%;
 }
 .profileCardBottom .reviewContainer {
   height: inherit;
@@ -1083,9 +1083,10 @@
 }
 
 .profileDisplayAllShelves {
-  margin-top: -1.5%;
   display: flex;
   flex-direction: row;
+  overflow-x: scroll;
+  margin-bottom: 1%;
 }
 
 .profileShelfBookCard {
