--- a/client/src/components/Profile/_Profile.scss
+++ b/client/src/components/Profile/_Profile.scss
@@ -5,8 +5,8 @@
   flex-direction: column;
   justify-content: flex-start;
   flex-wrap: wrap;
-  margin-left: 20%;
-  margin-right: 20%;
+  margin-left: 15%;
+  margin-right: 15%;
   background-color: rgb(40, 40, 40);
   height: 850px;
   padding: 50px;
@@ -14,16 +14,17 @@
 }
 
 .profileCardTop {
+    width: 100%;
   background-color: s.$primary;
   border-radius: s.$radius;
-  height: 63.5%;
+  height: 60%;
 }
 .profileCardBottom {
   background-color: s.$primary;
   border-radius: s.$radius;
-  height: 36.5%;
+  height: 40%;
 
-  .reviewContainer{
+  .reviewContainer {
     height: inherit;
   }
 }
@@ -32,10 +33,16 @@
   display: flex;
   flex-direction: row;
   align-items: flex-end;
+
+  img {
+    height: 80px;
+  }
+
 }
 
 .profilecardsubtitle {
-  margin-left: 5%;
+  margin-left: 10%;
+  margin-top: -2.75%;
 }
 
 .south {
@@ -45,18 +52,26 @@
   padding-top: 0.5%;
   padding-bottom: 1%;
 
-  h3{
+  h3 {
     border-bottom: 2px solid grey;
   }
 }
 
 .profileDisplayAllShelves {
-//   margin-top: -1.5%;
+  //   margin-top: -1.5%;
   display: flex;
   flex-direction: row;
   overflow-x: scroll;
   margin-bottom: 1%;
+
+  &::-webkit-scrollbar {
+    // display: none;
+    height: 5px;
+  }
 }
+
+
+
 .profileShelfBookCard {
   margin-right: 2.5%;
   display: flex;
@@ -83,15 +98,16 @@
       height: 110px;
     }
 
-    .bookTitle{
-        font-size: smaller;
+    .bookTitle {
+      font-size: smaller;
     }
 
-    .bookAuthor{}
+    .bookAuthor {
+    }
   }
 }
 
-.profilepage{
-    height: 150%;
-    overflow-y: scroll;
+.profilepage {
+  height: 150%;
+  overflow-y: scroll;
 }
