rename components for simplification

--- a/client/src/components/BookReview/_BookReview.scss
+++ b/client/src/components/BookReview/_BookReview.scss
@@ -120,7 +120,7 @@
   height: 25px;
   // margin-bottom: -4%;
   border-radius: calc(s.$radius * 1.5);
-  filter: invert(0.75);
+  border: 2px solid;
 }
 
 .reviewbuttonlabel {
