--- a/client/src/components/Header/_Header.scss
+++ b/client/src/components/Header/_Header.scss
@@ -95,21 +95,29 @@
 .profile {
   cursor: pointer;
   margin-left: 5%;
-  margin-right: -3.5%;
-  transition: .25s;
+  transition: 0.25s;
   &.pic {
-    filter: invert(90%);
     height: 35px;
     border-radius: calc(s.$radius * 1.5);
     border: 2px solid rgb(63, 63, 63);
-    &:hover{
-      filter: invert(100%);
-      border-color: black;
+    &:hover {
+      border-color: white;
     }
   }
-
-  &.drop{
+  &.drop {
     font-size: 12px;
+  }
+}
+
+.profileMenuButton {
+  cursor: pointer;
+  margin-left: 5%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  &:hover {
+    border-color: white !important;
+    color: white;
   }
 }
 
@@ -119,7 +127,7 @@
   position: absolute;
   text-align: right;
   top: 8.5%;
-  left: 85%;
+  left: 90%;
   background-color: rgba(s.$dark-alt, 0.95);
   z-index: 1;
   animation: dropDown 0.45s ease-in-out forwards;
