--- a/client/src/components/Profile/_Profile.scss
+++ b/client/src/components/Profile/_Profile.scss
@@ -14,9 +14,9 @@
 }
 
 .profileCardTop {
-    width: 100%;
+  width: 100%;
   background-color: s.$primary;
-  border-radius: s.$radius;
+  border-radius: s.$radius s.$radius 0px 0px;
   height: 60%;
 }
 .profileCardBottom {
@@ -36,13 +36,17 @@
 
   img {
     height: 80px;
+    margin: 10px 10px 0px 10px;
+    border: 2px solid s.$text;
+    border-radius: s.$radius;
+    max-width: 80px;
   }
-
 }
 
 .profilecardsubtitle {
-  margin-left: 10%;
-  margin-top: -2.75%;
+  margin-left: 100px;
+  margin-top: -20px;
+  color: rgba(s.$text, 0.85);
 }
 
 .south {
@@ -50,7 +54,7 @@
   padding-left: 5%;
   padding-right: 5%;
   padding-top: 0.5%;
-  padding-bottom: 1%;
+  padding-bottom: 3%;
 
   h3 {
     border-bottom: 2px solid grey;
@@ -69,8 +73,6 @@
     height: 5px;
   }
 }
-
-
 
 .profileShelfBookCard {
   margin-right: 2.5%;
@@ -110,4 +112,49 @@
 .profilepage {
   height: 150%;
   overflow-y: scroll;
+}
+
+.inputCard{
+  display: flex;
+  flex-direction: column;
+  padding: 20px;
+}
+
+.inputRow{
+  display: flex;
+  flex-direction: row;
+  margin-bottom: 5px;
+}
+
+.inputColumn {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  input[type=url],
+  input[type="text"] {
+    background-color: s.$dark-alt;
+    border: none;
+    color: s.$text;
+    margin-right: 10px;
+    font-size: 23px;
+    padding: 2.5px;
+    border-radius: calc(s.$radius/1.5);
+    width:150px;
+
+  }
+
+  input[type=url]{
+    width:750px;
+  }
+
+  &.url{
+    align-items: flex-start;
+    div{
+      margin-left: 35px;
+    }
+  }
+}
+
+.userInfoInput {
 }
