--- a/client/src/components/BookPage/_BookPage.scss
+++ b/client/src/components/BookPage/_BookPage.scss
@@ -1,70 +1,100 @@
-@use '../../styles' as s;
-
+@use "../../styles" as s;
 
 .reviewContainer {
-    background-color: s.$dark;
-    // background-color: rgb(49, 38, 104);
-    width: 100%;
-    height: fit-content;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
-    color: s.$text;
+  background-color: s.$dark;
+  // background-color: rgb(49, 38, 104);
+  width: 100%;
+  height: fit-content;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  color: s.$text;
 }
 
 .reviewInfo {
-    // padding: 30px;
-    background-color: s.$dark;
-    // background-color: cornflowerblue;
-    width: 95%;
-    height: 100%;
+  // padding: 30px;
+  background-color: s.$dark;
+  // background-color: cornflowerblue;
+  width: 95%;
+  height: 100%;
 
-    h4 {
-        margin-top: -2%;
-    }
+  h4 {
+    margin-top: -2%;
+  }
 }
 
 .newReviewTitle {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    align-content: center;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  align-content: center;
 }
 
 .stars {
-    margin-left: 1%;
-    display: flex;
-    flex-direction: row;
-    font-size: 19px;
-    cursor: pointer;
-    div{
-        margin-right: 3%;
-    }
+  margin-left: 1%;
+  display: flex;
+  flex-direction: row;
+  font-size: 19px;
+  cursor: pointer;
+  div {
+    margin-right: 3%;
+  }
 }
 
 .reviewForm {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 
-    input{
-        width: 75%;
-        height: 100px;
-        text-align: start;
+  input {
+    width: 75%;
+    height: 100px;
+    text-align: start;
+  }
+
+  button {
+    margin-top: 0.25%;
+    width: 15%;
+    background-color: s.$dark-alt;
+    color: s.$text;
+    border: none;
+    font-size: 15px;
+    padding: 3.5px 7.5px;
+    border-radius: calc(s.$radius/1.5);
+    cursor: pointer;
+    transition: .25s;
+
+    &:hover {
+      transform: scale(1.05);
+      background-color: s.$primary;
     }
 
-    button {
-        width: 15%;
+    &:active {
+      transform: scale(0.95);
     }
+
+    &:disabled {
+      opacity: (0.35);
+
+      &:hover {
+        transform: scale(1);
+        cursor: default;
+        background-color: s.$dark-alt;
+      }
+
+      &:active {
+        transform: scale(1);
+      }
+    }
+  }
 }
 
-
-.active{
-    color: white;
+.active {
+  color: white;
 }
 
-.userReviews{
-    margin-top: -1%;
-    display: flex;
-    flex-direction: column;
+.userReviews {
+  margin-top: -1%;
+  display: flex;
+  flex-direction: column;
 }
