--- a/client/src/components/Profile/_Profile.scss
+++ b/client/src/components/Profile/_Profile.scss
@@ -41,6 +41,43 @@
     border-radius: s.$radius;
     max-width: 80px;
   }
+
+  button {
+    margin-top: 0.25%;
+    width: 15%;
+    background-color: s.$dark-alt;
+    color: s.$text;
+    border: none;
+    font-size: 15px;
+    padding: 3.5px 7.5px;
+    border-radius: calc(s.$radius/1.5);
+    cursor: pointer;
+    transition: .25s;
+
+    &:hover {
+      transform: scale(1.05);
+      background-color: s.$primary;
+    }
+
+    &:active {
+      transform: scale(0.95);
+    }
+
+    &:disabled {
+      opacity: (0.35);
+
+      &:hover {
+        transform: scale(1);
+        cursor: default;
+        background-color: s.$dark-alt;
+      }
+
+      &:active {
+        transform: scale(1);
+      }
+    }
+  }
+
 }
 
 .profilecardsubtitle {
