--- a/client/src/components/Profile/_Profile.scss
+++ b/client/src/components/Profile/_Profile.scss
@@ -52,6 +52,7 @@
     padding: 3.5px 7.5px;
     border-radius: calc(s.$radius/1.5);
     cursor: pointer;
+    margin-right: .5%;
     transition: .25s;
 
     &:hover {
