--- a/client/src/components/BookReview/_BookReview.scss
+++ b/client/src/components/BookReview/_BookReview.scss
@@ -1,5 +1,12 @@
 @use "../../styles" as s;
 
+$one: 1;
+$two: 2;
+$three: 3;
+$four: 4;
+$five: 5;
+$six: 6;
+
 .userReviewCard {
   background-color: s.$dark-alt;
   // background-color: salmon;
@@ -28,8 +35,8 @@
     margin-right: 10px;
   }
 
-  
-  button,img{
+  button,
+  img {
     margin-right: 5px;
   }
   span {
@@ -71,11 +78,10 @@
       }
     }
   }
-
 }
-.reviewuser{
+.reviewuser {
   cursor: pointer;
-  &:hover{
+  &:hover {
     color: s.$text;
   }
 }
@@ -84,7 +90,7 @@
   font-size: 15px;
   cursor: pointer;
 
-  &:hover{
+  &:hover {
     color: white;
   }
 }
@@ -115,22 +121,81 @@
     // align-self: center !important;
     margin-top: -5% !important;
   }
-
-  div:nth-child(2) {
-    span:nth-of-type(1) {
-      visibility: hidden;
-      position: relative;
+  &.zero {
+    div:nth-of-type(1) {
+      span:nth-of-type(1) {
+        visibility: hidden;
+        position: relative;
+      }
+      span:nth-of-type(1):after {
+        @include s.addReaction()
+      }
     }
-    span:nth-of-type(1):after {
-      color: s.$dark-alt;
-      font-size: 20px;
-      position: absolute;
-      top: -30%;
-      left: 0%;
-      visibility: visible;
-      content: " + " !important;
-      // padding-left: 5px;
-      // padding-right: 5px;
+  }
+  &.one {
+    div:nth-of-type(2) {
+      span:nth-of-type(1) {
+        visibility: hidden;
+        position: relative;
+      }
+      span:nth-of-type(1):after {
+        @include s.addReaction()
+      }
+    }
+  }
+  &.two {
+    div:nth-of-type(3){
+      span:nth-of-type(1) {
+        visibility: hidden;
+        position: relative;
+      }
+      span:nth-of-type(1):after {
+        @include s.addReaction()
+      }
+    }
+  }
+  &.three {
+    div:nth-of-type(4) {
+      span:nth-of-type(1) {
+        visibility: hidden;
+        position: relative;
+      }
+      span:nth-of-type(1):after {
+        @include s.addReaction()
+      }
+    }
+  }
+  &.four {
+    div:nth-of-type(5) {
+      span:nth-of-type(1) {
+        visibility: hidden;
+        position: relative;
+      }
+      span:nth-of-type(1):after {
+        @include s.addReaction()
+      }
+    }
+  }
+  &.five {
+    div:nth-of-type(6) {
+      span:nth-of-type(1) {
+        visibility: hidden;
+        position: relative;
+      }
+      span:nth-of-type(1):after {
+        @include s.addReaction()
+      }
+    }
+  }
+  &.six {
+    div:nth-of-type(7) {
+      span:nth-of-type(1) {
+        visibility: hidden;
+        position: relative;
+      }
+      span:nth-of-type(1):after {
+        @include s.addReaction()
+      }
     }
   }
 
