set up community component, create sidebar component and conditionaly display options

--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -11,6 +11,7 @@
 @use "./components/HomeShelfContainer/HomeShelfContainer";
 @use "./components/Auth/Auth";
 @use "./components/Profile/Profile";
+@use "./components/Community/Community";
 
 @use "./styles" as s;
 
