--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -12,6 +12,7 @@
 @use "./components/Auth/Auth";
 @use "./components/Profile/Profile";
 @use "./components/Community/Community";
+@use "./components/BookClubCard/BookClubCard";
 
 @use "./styles" as s;
 
