--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -13,6 +13,7 @@
 @use "./components/Profile/Profile";
 @use "./components/Community/Community";
 @use "./components/BookClubCard/BookClubCard";
+@use "./components/BookClub/BookClub";
 
 @use "./styles" as s;
 
