--- a/client/src/components/BookClubCard/_BookClubCard.scss
+++ b/client/src/components/BookClubCard/_BookClubCard.scss
@@ -1,87 +1,123 @@
 @use "../../styles" as s;
 
 .bookClubCard {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 30px;
-    padding-bottom: 10px;
-    background-color: rgb(128, 180, 128);
-    height: 350px;
-    width: 250px;
-    border-radius: calc(s.$radius * 1.5);
-    margin-bottom: 30px;
-  
-    h2 {
-      margin-bottom: 0px;
-    }
-  
-    hr {
-      width: 100%;
-    }
-  
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 30px;
+  padding-bottom: 10px;
+  background-color: rgb(128, 180, 128);
+  background: s.$primary;
+  height: 375px;
+  width: 275px;
+  border-radius: calc(s.$radius * 1.5);
+  margin-bottom: 30px;
+
+  h2 {
+    margin-bottom: 0px;
+    color: white;
+  }
+
+  span {
+    color: white;
+  }
+
+  hr {
+    width: 100%;
+  }
+
+  img {
+    height: 90px;
+    width: 90px;
+    border: 3px solid;
+    border-radius: 100px;
+    padding: 3px;
+  }
+
+  &.addNew {
     img {
       height: 100px;
       width: 100px;
-      border: 3px solid;
-      border-radius: 15px;
+      border: 0px solid;
+      filter: invert(100%);
     }
-  }
-  
-  .clubCardBottom {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-  
-    button {
-      // margin-top: 0.25%;
-      width: 50%;
+    input[type="url"],
+    input[type="text"] {
       background-color: s.$dark-alt;
-      color: s.$text;
       border: none;
-      font-size: 15px;
-      padding: 3.5px 7.5px;
+      color: s.$text;
+      margin-right: 10px;
+      font-size: 16px;
+      padding: 5px;
       border-radius: calc(s.$radius/1.5);
-      cursor: pointer;
-      margin-right: 0.5%;
-      transition: 0.25s;
-  
+      width: 200px;
+      text-align: center;
+      margin-bottom: 5%;
+    }
+
+
+    input[type="url"]{
+      width: 225px;
+    }
+  }
+}
+
+.clubCardBottom {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+
+  button {
+    width: 50%;
+    background-color: s.$dark-alt;
+    color: s.$text;
+    border: none;
+    font-size: 15px;
+    padding: 3.5px 7.5px;
+    border-radius: calc(s.$radius/1.5);
+    cursor: pointer;
+    margin-right: 0.5%;
+    transition: 0.25s;
+    margin-bottom: 2.5%;
+
+
+    &:hover {
+      transform: scale(1.05);
+      background-color: s.$primary;
+    }
+
+    &:active {
+      transform: scale(0.95);
+    }
+
+    &:disabled {
+      opacity: (0.35);
+
       &:hover {
-        transform: scale(1.05);
-        background-color: s.$primary;
+        transform: scale(1);
+        cursor: default;
+        background-color: s.$dark-alt;
       }
-  
+
       &:active {
-        transform: scale(0.95);
-      }
-  
-      &:disabled {
-        opacity: (0.35);
-  
-        &:hover {
-          transform: scale(1);
-          cursor: default;
-          background-color: s.$dark-alt;
-        }
-  
-        &:active {
-          transform: scale(1);
-        }
+        transform: scale(1);
       }
     }
   }
-  
-  .clubDescription {
-    display: flex;
-    flex-direction: column;
-  
-    background-color: rgb(241, 116, 158);
-    // height: 100%;
-    padding: 5%;
-    justify-content: flex-start;
-    align-content: center;
-    border-radius: s.$radius;
-    margin-bottom: 15%;
-  }
-  
+}
+
+.clubDescription {
+  display: flex;
+  flex-direction: column;
+
+  background-color: rgb(241, 116, 158);
+  background-color: s.$dark;
+  padding: 5%;
+  justify-content: center;
+  align-content: center;
+  border-radius: s.$radius;
+  margin-bottom: 60px;
+  align-items: center;
+  text-align: center;
+}
