--- a/client/src/components/Community/_Community.scss
+++ b/client/src/components/Community/_Community.scss
@@ -3,7 +3,7 @@
 .communityDisplay {
   display: flex;
   flex-direction: column;
-  background-color: pink;
+  // background-color: pink;
   height: 130%;
   width: 80%;
   align-items: center;
@@ -17,8 +17,8 @@
 .commContainer {
   height: 80%;
   width: 100%;
-  // background-color: s.$bg;
   background-color: maroon;
+  background-color: s.$bg;
   padding: 30px;
   padding-top: 10px;
   color: s.$text;
@@ -26,6 +26,7 @@
 
 .clubsContainer {
   background-color: skyblue;
+  background-color: s.$dark;
   height: 100%;
   display: flex;
   flex-direction: row;
