--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1405,6 +1405,37 @@
   border-radius: 100px;
   padding: 3px;
 }
+.bookClubCard button {
+  width: 50%;
+  background-color: rgb(65, 65, 65);
+  color: rgb(216, 216, 216);
+  border: none;
+  font-size: 15px;
+  padding: 3.5px 7.5px;
+  border-radius: 3.3333333333px;
+  cursor: pointer;
+  margin-right: 0.5%;
+  transition: 0.25s;
+  margin-bottom: 2.5%;
+}
+.bookClubCard button:hover {
+  transform: scale(1.05);
+  background-color: rgba(128, 128, 128, 0.467);
+}
+.bookClubCard button:active {
+  transform: scale(0.95);
+}
+.bookClubCard button:disabled {
+  opacity: 0.35;
+}
+.bookClubCard button:disabled:hover {
+  transform: scale(1);
+  cursor: default;
+  background-color: rgb(65, 65, 65);
+}
+.bookClubCard button:disabled:active {
+  transform: scale(1);
+}
 .bookClubCard.addNew img {
   height: 100px;
   width: 100px;
@@ -1434,48 +1465,19 @@
   justify-content: space-between;
   align-items: center;
 }
-.clubCardBottom button {
-  width: 50%;
-  background-color: rgb(65, 65, 65);
-  color: rgb(216, 216, 216);
-  border: none;
-  font-size: 15px;
-  padding: 3.5px 7.5px;
-  border-radius: 3.3333333333px;
-  cursor: pointer;
-  margin-right: 0.5%;
-  transition: 0.25s;
-  margin-bottom: 2.5%;
-}
-.clubCardBottom button:hover {
-  transform: scale(1.05);
-  background-color: rgba(128, 128, 128, 0.467);
-}
-.clubCardBottom button:active {
-  transform: scale(0.95);
-}
-.clubCardBottom button:disabled {
-  opacity: 0.35;
-}
-.clubCardBottom button:disabled:hover {
-  transform: scale(1);
-  cursor: default;
-  background-color: rgb(65, 65, 65);
-}
-.clubCardBottom button:disabled:active {
-  transform: scale(1);
-}
 
 .clubDescription {
   display: flex;
   flex-direction: column;
+  height: 100px;
+  width: 200px;
   background-color: rgb(241, 116, 158);
   background-color: rgb(45, 45, 45);
-  padding: 5%;
+  padding: 15px;
   justify-content: center;
   align-content: center;
   border-radius: 5px;
-  margin-bottom: 60px;
+  margin-bottom: 30px;
   align-items: center;
   text-align: center;
 }
