--- a/client/src/components/Community/_Community.scss
+++ b/client/src/components/Community/_Community.scss
@@ -8,6 +8,7 @@
   width: 80%;
   align-items: center;
   justify-content: flex-start;
+  overflow-y: hidden;
 
   div {
     // color: s.$text;
@@ -15,7 +16,7 @@
 }
 
 .commContainer {
-  height: 80%;
+  height: 100%;
   width: 100%;
   background-color: maroon;
   background-color: s.$bg;
@@ -27,10 +28,24 @@
 .clubsContainer {
   background-color: skyblue;
   background-color: s.$dark;
-  height: 100%;
+  height: 87.5%;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-evenly;
   padding: 30px;
+  overflow-y: scroll;
+  border-radius: s.$radius;
+}
+
+.communityTitle{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+
+  .searchBar{
+    margin-top: 10px;
+    font-size: 20px;
+  }
 }
