--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1353,9 +1353,10 @@
   width: 80%;
   align-items: center;
   justify-content: flex-start;
+  overflow-y: hidden;
 }
 .commContainer {
-  height: 80%;
+  height: 100%;
   width: 100%;
   background-color: maroon;
   background-color: rgb(15, 15, 15);
@@ -1367,12 +1368,25 @@
 .clubsContainer {
   background-color: skyblue;
   background-color: rgb(45, 45, 45);
-  height: 100%;
+  height: 87.5%;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-evenly;
   padding: 30px;
+  overflow-y: scroll;
+  border-radius: 5px;
+}
+
+.communityTitle {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+.communityTitle .searchBar {
+  margin-top: 10px;
+  font-size: 20px;
 }
 
 .bookClubCard {
