--- a/client/src/index.css
+++ b/client/src/index.css
@@ -799,6 +799,35 @@
   margin-right: 1%;
 }
 
+.sidebar {
+  display: flex;
+  flex-direction: column;
+  background-color: rgb(67, 174, 219);
+  background-color: rgba(128, 128, 128, 0.467);
+  height: 125%;
+  width: 20%;
+  align-items: center;
+  overflow-y: scroll;
+}
+.sidebar h2 {
+  color: rgb(216, 216, 216);
+}
+
+.sideBarBookClubsTitle {
+  margin-bottom: 0%;
+  background-color: rgb(65, 65, 65);
+  padding: 10px;
+  border-radius: 5px 5px 0px 0px;
+}
+
+.sideBarBookClubsContainer {
+  background-color: rgb(45, 45, 45);
+  padding: 30px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  border-radius: 0px 0px 5px 5px;
+}
+
 .clubrow {
   display: flex;
   flex-direction: row;
@@ -809,12 +838,16 @@
 .clubrow div {
   margin-right: 1.5%;
 }
+.clubrow .clubname {
+  padding-top: 5px;
+  padding-bottom: 5px;
+}
 .clubrow .clubname:hover {
   color: white;
   cursor: pointer;
 }
 .clubrow .dropdown {
-  font-size: 23.5px;
+  font-size: 15px;
 }
 .clubrow .dropdown:hover {
   color: white;
@@ -840,6 +873,13 @@
 }
 .clubOption button {
   border: none;
+}
+
+.sideBarBookClubContent {
+  background-color: rgb(65, 65, 65);
+  border-radius: 0px 0px 5px 5px;
+  padding-top: 2px;
+  padding-bottom: 2px;
 }
 
 .homeshelfrow {
@@ -1368,7 +1408,7 @@
 .clubsContainer {
   background-color: skyblue;
   background-color: rgb(45, 45, 45);
-  height: 87.5%;
+  height: 89.5%;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
@@ -1400,6 +1440,7 @@
   height: 375px;
   width: 275px;
   border-radius: 7.5px;
+  margin-right: 5px;
   margin-bottom: 30px;
 }
 .bookClubCard h2 {
@@ -1449,6 +1490,10 @@
 }
 .bookClubCard button:disabled:active {
   transform: scale(1);
+}
+.bookClubCard.addNew {
+  background-color: darkgreen;
+  background-color: gray;
 }
 .bookClubCard.addNew img {
   height: 100px;
@@ -1537,19 +1582,6 @@ body {
   justify-content: center;
   align-content: center;
   height: 745px;
-}
-
-.sidebar {
-  display: flex;
-  flex-direction: column;
-  background-color: rgb(67, 174, 219);
-  background-color: rgba(128, 128, 128, 0.467);
-  height: 100vh;
-  width: 20%;
-  align-items: center;
-}
-.sidebar h2 {
-  color: rgb(216, 216, 216);
 }
 
 .display {
