--- a/client/src/index.css
+++ b/client/src/index.css
@@ -287,6 +287,56 @@
   margin-right: 3%;
 }
 
+.allReviewsTitle {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.sortFilter {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  margin-bottom: 1%;
+  margin-right: 2.5%;
+}
+.sortFilter select {
+  margin-top: 0.25%;
+  background-color: rgb(65, 65, 65);
+  color: rgb(216, 216, 216);
+  border: none;
+  font-size: 15px;
+  padding: 3.5px 7.5px;
+  border-radius: 3.3333333333px;
+  cursor: pointer;
+  transition: 0.25s;
+}
+.sortFilter select:hover {
+  transform: scale(1.05);
+  background-color: rgba(128, 128, 128, 0.467);
+}
+.sortFilter select:active {
+  transform: scale(0.95);
+}
+.sortFilter select:disabled {
+  opacity: 0.35;
+}
+.sortFilter select:disabled:hover {
+  transform: scale(1);
+  cursor: default;
+  background-color: rgb(65, 65, 65);
+}
+.sortFilter select:disabled:active {
+  transform: scale(1);
+}
+
+.filter {
+  display: flex;
+  flex-direction: row;
+  font-size: 14px;
+}
+
 .reviewForm {
   display: flex;
   flex-direction: column;
@@ -805,7 +855,7 @@
   background-color: rgb(67, 174, 219);
   background-color: rgba(128, 128, 128, 0.467);
   height: 125%;
-  width: 20%;
+  width: 25%;
   align-items: center;
   overflow-y: scroll;
 }
@@ -1377,7 +1427,7 @@
   width: 150px;
 }
 .inputColumn input[type=url] {
-  width: 750px;
+  width: 650px;
 }
 .inputColumn.url {
   align-items: flex-start;
